--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #19193D;
+  color: #fff;
+}
+
+a {
+  text-decoration:  none;
 }
 
 code {
